--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-router": "^0.0.1"
+    "express-router": "^0.0.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
